--- a/index.html
+++ b/index.html
@@ -14,5 +14,46 @@
     <link rel="stylesheet" href="style.css" />
     <title>FAQ Accordion Card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <section class="illustration"></section>
+      <section class="faq">
+        <div class="faq_item">
+          <p class="faq_question">How many team members can I invite?</p>
+          <p class="faq_answer">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </p>
+        </div>
+        <div class="faq_item">
+          <p class="faq_question">What is the maximum file upload size?</p>
+          <p class="faq_answer">
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </p>
+        </div>
+        <div class="faq_item">
+          <p class="faq_question">How do I reset my password?</p>
+          <p class="faq_answer">
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </p>
+        </div>
+        <div class="faq_item">
+          <p class="faq_question">Can I cancel my subscription?</p>
+          <p class="faq_answer">
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </p>
+        </div>
+        <div class="faq_item">
+          <p class="faq_question">Do you provide additional support?</p>
+          <p class="faq_answer">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </p>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
