--- a/index.html
+++ b/index.html
@@ -20,38 +20,135 @@
   </head>
   <body>
     <div class="card">
-      <section class="illustration"></section>
-      <section class="faq">
-        <div class="faq_item">
-          <p class="faq_question">How many team members can I invite?</p>
+      <img
+        class="flying-cube"
+        src="images/illustration-box-desktop.svg"
+        alt=""
+      />
+      <div class="illustration">
+        <picture>
+          <source
+            media="(min-width: 1024px)"
+            srcset="images/illustration-woman-online-desktop.svg"
+          />
+          <source
+            media="(max-height: 400px)"
+            srcset="images/illustration-woman-online-desktop.svg"
+          />
+          <img
+            src="images/illustration-woman-online-mobile.svg"
+            alt="woman looking at a screen illustration"
+          />
+        </picture>
+      </div>
+      <section class="faq flow-content">
+        <h1>FAQ</h1>
+        <div class="faq_item flow-content">
+          <p class="faq_question">
+            How many team members can I invite?
+            <svg
+              class="arrow"
+              width="10"
+              height="7"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </p>
           <p class="faq_answer">
             You can invite up to 2 additional users on the Free plan. There is
             no limit on team members for the Premium plan.
           </p>
         </div>
-        <div class="faq_item">
-          <p class="faq_question">What is the maximum file upload size?</p>
+        <div class="faq_item flow-content">
+          <p class="faq_question">
+            What is the maximum file upload size?<svg
+              class="arrow"
+              width="10"
+              height="7"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </p>
           <p class="faq_answer">
             No more than 2GB. All files in your account must fit your allotted
             storage space.
           </p>
         </div>
-        <div class="faq_item">
-          <p class="faq_question">How do I reset my password?</p>
+        <div class="faq_item flow-content">
+          <p class="faq_question">
+            How do I reset my password?<svg
+              class="arrow"
+              width="10"
+              height="7"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </p>
           <p class="faq_answer">
             Click “Forgot password” from the login page or “Change password”
             from your profile page. A reset link will be emailed to you.
           </p>
         </div>
-        <div class="faq_item">
-          <p class="faq_question">Can I cancel my subscription?</p>
+        <div class="faq_item flow-content">
+          <p class="faq_question">
+            Can I cancel my subscription?<svg
+              class="arrow"
+              width="10"
+              height="7"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </p>
           <p class="faq_answer">
             Yes! Send us a message and we’ll process your request no questions
             asked.
           </p>
         </div>
-        <div class="faq_item">
-          <p class="faq_question">Do you provide additional support?</p>
+        <div class="faq_item flow-content">
+          <p class="faq_question">
+            Do you provide additional support?<svg
+              class="arrow"
+              width="10"
+              height="7"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </p>
           <p class="faq_answer">
             Chat and email support is available 24/7. Phone lines are open
             during normal business hours.
@@ -59,5 +156,6 @@
         </div>
       </section>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
